docs/v1.9.6/_sources/gallery/utils/build_library.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/utils/build_library.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_utils_build_library.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_utils_build_library.py:


========================================
Building database and Printing Materials
========================================

This example demonstrates how to build a material library using the `build_library` function
from the PyOptik package and how to print out the available materials using the `MaterialBank` class.

We will first build the `others` material library, removing any previously downloaded files,
and then print out all the available materials in the `MaterialBank`.

The available libraries are:
- 'classics'
- 'glasses'
- 'metals'
- 'organics'
- 'others'
- 'all' (to download all libraries)

.. GENERATED FROM PYTHON SOURCE LINES 23-24

Import necessary modules

.. GENERATED FROM PYTHON SOURCE LINES 24-31

.. code-block:: Python

    from PyOptik import MaterialBank

    # Build the 'classics' material library and remove previously downloaded files
    MaterialBank.build_library('classics', remove_previous=True)

    # Print all the available materials (Sellmeier and Tabulated)
    MaterialBank.print_available()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | silicon               | silver                |
    +-----------------------+-----------------------+
    | fused_silica          | sodium                |
    +-----------------------+-----------------------+
    | BK7                   | aluminium             |
    +-----------------------+-----------------------+
    | argon                 | copper                |
    +-----------------------+-----------------------+
    | flint                 | calcium               |
    +-----------------------+-----------------------+
    | air                   | gold                  |
    +-----------------------+-----------------------+
    | crown                 | iron                  |
    +-----------------------+-----------------------+
    | soda_lime_glass       | nickel                |
    +-----------------------+-----------------------+
    | polystyren            | zinc                  |
    +-----------------------+-----------------------+
    | ZBLAN                 |                       |
    +-----------------------+-----------------------+
    | BAK1                  |                       |
    +-----------------------+-----------------------+
    | germanium             |                       |
    +-----------------------+-----------------------+
    | SF5                   |                       |
    +-----------------------+-----------------------+
    | lithium_niobate       |                       |
    +-----------------------+-----------------------+
    | water                 |                       |
    +-----------------------+-----------------------+





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.833 seconds)


.. _sphx_glr_download_gallery_utils_build_library.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: build_library.ipynb <build_library.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: build_library.py <build_library.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
