docs/v1.10.1/_sources/gallery/utils/build_library.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/utils/build_library.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_utils_build_library.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_utils_build_library.py:


========================================
Building database and Printing Materials
========================================

This example demonstrates how to build a material library using the `build_library` function
from the PyOptik package and how to print out the available materials using the `MaterialBank` class.

We will first build the `others` material library, removing any previously downloaded files,
and then print out all the available materials in the `MaterialBank`.

The available libraries are:
- 'classics'
- 'glasses'
- 'metals'
- 'organics'
- 'others'
- 'all' (to download all libraries)

.. GENERATED FROM PYTHON SOURCE LINES 23-24

Import necessary modules

.. GENERATED FROM PYTHON SOURCE LINES 24-31

.. code-block:: Python

    from PyOptik import MaterialBank

    # Build the 'classics' material library and remove previously downloaded files
    MaterialBank.build_library('all', remove_previous=False)

    # Print all the available materials (Sellmeier and Tabulated)
    MaterialBank.print_available()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.SELLMEIER <enum 'MaterialType'> True False
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    MaterialType.TABULATED <enum 'MaterialType'> False True
    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | water                 | magnesium             |
    +-----------------------+-----------------------+
    | acetone               | BK7                   |
    +-----------------------+-----------------------+
    | ethanol               | titanium              |
    +-----------------------+-----------------------+
    | acetylene             | paladium              |
    +-----------------------+-----------------------+
    | cellulose             | tantalum              |
    +-----------------------+-----------------------+
    | germanium             | lead                  |
    +-----------------------+-----------------------+
    | flint                 | calcium               |
    +-----------------------+-----------------------+
    | SF5                   | zinc                  |
    +-----------------------+-----------------------+
    | ZBLAN                 | nickel                |
    +-----------------------+-----------------------+
    | SF10                  | chromium              |
    +-----------------------+-----------------------+
    | LASF9                 | copper                |
    +-----------------------+-----------------------+
    | soda_lime_glass       | bismuth               |
    +-----------------------+-----------------------+
    | glycerol              | sodium                |
    +-----------------------+-----------------------+
    | air                   | gold                  |
    +-----------------------+-----------------------+
    | methane               | rhodium               |
    +-----------------------+-----------------------+
    | SF11                  | iron                  |
    +-----------------------+-----------------------+
    | pvc                   | tungsten              |
    +-----------------------+-----------------------+
    | FK51A                 | silver                |
    +-----------------------+-----------------------+
    | argon                 | vanadium              |
    +-----------------------+-----------------------+
    | BAK1                  | aluminium             |
    +-----------------------+-----------------------+
    | polystyrene           | pva                   |
    +-----------------------+-----------------------+
    | fused_silica          | polyetylene           |
    +-----------------------+-----------------------+
    | ethane                | silicon               |
    +-----------------------+-----------------------+
    | ethylene              |                       |
    +-----------------------+-----------------------+
    | polycarbonate         |                       |
    +-----------------------+-----------------------+
    | polystyren            |                       |
    +-----------------------+-----------------------+
    | lithium_niobate       |                       |
    +-----------------------+-----------------------+
    | crown                 |                       |
    +-----------------------+-----------------------+
    | methanol              |                       |
    +-----------------------+-----------------------+
    | BAF10                 |                       |
    +-----------------------+-----------------------+
    | propanol              |                       |
    +-----------------------+-----------------------+





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 37.003 seconds)


.. _sphx_glr_download_gallery_utils_build_library.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: build_library.ipynb <build_library.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: build_library.py <build_library.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
